# docker-compose-with-env

./: .env  docker-compose.yml
python_server/: Dockerfile  main.py  pyproject.toml
rust_server/: Dockerfile
rust_server/src/: main.rs
